# chief

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  ruff.toml
.serena/: project.yml
.serena/memories/: architecture_patterns.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
src/appclis/: __init__.py  chen.py  chief.py
src/appclis/settings/: __init__.py  chen_settings.py  settings_manager.py
src/libagentic/: agents.py  models.py  mongo.py  prompts.py  providers.py
src/libagentic/tools/: search.py  time.py
src/libchatinterface/: __init__.py  cli.py  costs.py  session.py
src/libshared/: mongo.py
